History in reverse order
----------------------------------------------------

----------------------------------------------------
infosme-build-20100520 13:10 bukind (v1,v2)

2010-05-20 13:00 bukind
 feature: ability to limit traffic based on SMS parts, not whole SMS.

2010-05-19 14:50 bukind
 bugfix: processingTasks() is not working in v2: inProcess() is replaced with isActive()

----------------------------------------------------
infosme-build-20100416 11:30 bukind

2010-04-14 16:30 bukind
 bugfix: CsvStore::curMsg invalidated after timeMap.erase(), v1&2 fixed
2010-04-13 10:40 bukind
 porting performance tester to v2
2010-04-12 14:45 bukind
 performance test support (no transport layer), v1 only
2010-04-12 14:45 bukind
 bugfix: typo DATA_SM_RESP was used instead of DATA_SM
2010-04-07 14:00 bukind
 task statistics on open messages, v1 & v2
2010-04-07 15:50 bukind
 license support, v1 & v2

----------------------------------------------------
infosme2-build-20100330 11:00 bukind v2.0

2010-03-30 10:40 bukind
 porting fixes & features into v2:
 - not opening processed files;
 - final msgs are purged from memory;
 - forcing msg load when needed to set state DELETED;
 - avoiding string memleak when loading configs;
 - support for DATA_SM pdus;
 - fix for inProcess flag disabling when set task state="disable"
 - stopping statmgr when stopping task processor (caused core)
 - awakening TaskProcessor when task state is changed
 - removing forced flash=false when using datasmpush

----------------------------------------------------
infosme-build-20100329 12:20 bukind

2010-03-26 13:00 bukind
 bugfix: when task is disabled, its inProcess flag was not reset

2010-03-19 16:55 bukind
 feature: support for incoming DATA_SM receipts

----------------------------------------------------
infosme-build-20100310 18:00 bukind

2010-03-10 17:45 bukind
 bugfix: message to set state=DELETED are forced to be loaded from disk

2010-03-10 11:57 bukind