@@ -2,7 +2,14 @@ History in reverse order
 ----------------------------------------------------
 
 ----------------------------------------------------
-infosme-build-20100520 13:10 bukind (v1,v2)
+infosme-build-20100520 16:50 bukind (v2)
+
+2010-05-20 16:45 bukind
+ bugfix: v2 had a dead lock on expired responses & receipts
+ feature: v2 receipt waiting timers are restored at restart (from jstore)
+
+----------------------------------------------------
+infosme-build-20100520 13:10 bukind (v1)
 
 2010-05-20 13:00 bukind
  feature: ability to limit traffic based on SMS parts, not whole SMS.
